fix miss-aligned grid styles
* repeat(n, minmax(0, 1fr))

--- a/src/styles/components/AudioControlBar.scss
+++ b/src/styles/components/AudioControlBar.scss
@@ -21,7 +21,7 @@
         display: grid;
         grid-gap: 10px;
         height: 100%;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(3, minmax(0, 1fr));
 
         .col {
             @include flex();
