--- a/src/styles/components/tracks.scss
+++ b/src/styles/components/tracks.scss
@@ -8,35 +8,35 @@
         overflow: hidden;
 
         &.grid-albums {
-            grid-template-columns: repeat(7, 1fr);
+            grid-template-columns: repeat(7, minmax(0, 1fr));
 
             @media (max-width: 1800px) {
-                grid-template-columns: repeat(5, 1fr);
+                grid-template-columns: repeat(5, minmax(0, 1fr));
             }
             @media (max-width: 1500px) {
-                grid-template-columns: repeat(4, 1fr);
+                grid-template-columns: repeat(4, minmax(0, 1fr));
                 // grid-template-columns: 30% 30% 30%;
             }
             @media (max-width: 1100px) {
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(3, minmax(0, 1fr));
             }
             @media (max-width: 800px) {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(2, minmax(0, 1fr));
             }
         }
 
         &.grid-tracks-big {
             margin-top: 28px;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(4, minmax(0, 1fr));
 
             @media (max-width: 1800px) {
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(3, minmax(0, 1fr));
             }
             @media (max-width: 1400px) {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(2, minmax(0, 1fr));
             }
             @media (max-width: 850px) {
-                grid-template-columns: repeat(1, 1fr);
+                grid-template-columns: repeat(1, minmax(0, 1fr));
             }
         }
     }
